# cuser

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  coveralls.py
examples/: CMakeLists.txt  serializeEnumDynamic.cpp  serializeEnumStatic.cpp
include/cuser/: DOM.hpp  Serializer.hpp  SerializerException.hpp
include/cuser/detail/: Serializer.hpp
include/cuser/detail/serializers/: ArraySerializer.hpp  BoolSerializer.hpp  DefaultSerializer.hpp  FloatSerializer.hpp  IOStreamSerializer.hpp  IntegerSerializer.hpp  MapSerializer.hpp  VectorSerializer.hpp
include/cuser/dom/: nlohmannDOM.hpp
include/cuser/dom/nlohmann/: InDOM.hpp  OutDOM.hpp
include/cuser/utils/: GetArgByType.hpp  HasStreamOperators.hpp  IndexOfType.hpp  LastIndexOf.hpp
include/cuser/utils/detail/: HasStreamOperatorsImpl.hpp  IndexOfTypeImpl.hpp  LastIndexOfImpl.hpp
test/: CMakeLists.txt  testArraySerializer.cpp  testBoolSerializer.cpp  testCustomSerializer.cpp  testDefaultSerializer.cpp  testFloatSerializer.cpp  testGetArgByType.cpp  testHasStreamOperators.cpp  testIOStreamSerializer.cpp  testIndexOfType.cpp  testIntegerSerializer.cpp  testLastIndexOf.cpp  testMapSerializer.cpp  testNlohmannJson.cpp  testVectorSerializer.cpp
test/dom/: DOMData.hpp  InDOM.hpp  OutDOM.hpp
